Adding the first contents
Adding the first contents

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Title</title>
+    <title>GitHub Home</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Site Title</h1>
+            <h1>GitHub Home Page</h1>
             <article>
-                <h2>Article 001</h2>
-                <p>Article text 001</p>                
+                <h2>This is a first article 001</h2>
+                <p>This is a first article text 001</p>                
             </article>
             <article>
-                <h2>Article 002</h2>
-                <p>Article text 002</p> 
+                <h2>This is a second article 002</h2>
+                <p>Article text 002</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis dolores itaque vitae quod ullam placeat expedita ad, aut nisi nesciunt quia accusantium eaque laboriosam consequatur debitis, in, architecto dolore nam.</p> 
             </article>
         </header>
     </main>
